[project]
name = "prod-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14" 
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "guardrails-ai>=0.10.2",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.4",
    "langsmith>=0.8.14",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "redis>=5.0,<8.0",
    "redisvl>=0.23.0", 
    "sentence-transformers>=5.6.0",
    "slowapi>=0.1.9",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
    "valkey>=6.1.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
